<resources>
    <string name="app_name">Plant app</string>
    <string name="title_home">Mis plantas</string>
    <string name="title_diagnosis">Diagnóstico</string>
    <string name="title_suggestions">Sugerencias</string>
    <string name="title_profile">Profile</string>
    <string name="empty_plant_list">No hay plantas ni espacios creados. Presione el botón de abajo para iniciar</string>
    <string name="create_plant">Crear planta</string>
    <string name="plant_name_input_label">Nombre de la planta</string>
    <string name="open_time_picker">Hora de riego</string>
    <string name="waterin_time_label">Horario de riego</string>
    <string name="monday_label">L</string>
    <string name="tuesday_label">M</string>
    <string name="wednesday_label">M</string>
    <string name="thursday_label">J</string>
    <string name="friday_label">V</string>
    <string name="saturday_label">S</string>
    <string name="sunday_label">D</string>
    <string name="comments_input_hint">Comentarios</string>
    <string name="fab_description">Fab para crear una nueva planta</string>
    <string name="spaces_dropdown_hint">Seleccione un espacio</string>
    <string name="create_spot">Crear espacio</string>
    <string name="riego">Riego</string>
    <string name="riego_description">Riega con menos frecuencia pero con más agua.</string>
    <string name="riego_initial">R</string>
    <string name="nombre_del_espacio">Nombre del espacio</string>
    <string name="capacidad_espacio">Capacidad (m2)</string>
    <string name="tipo_de_espacio">Tipo de espacio:</string>
    <string name="crear_espacio">Crear espacio</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="tipo_de_luz">Tipo de luz:</string>
    <string name="natural">Natural</string>
    <string name="artificial">Artificial</string>
    <string name="mixta">Mixta</string>
    <string name="tipo_de_aire">Tipo de aire:</string>
    <string name="cancelar">Cancelar</string>
    <string name="perfil">Perfil</string>
    <string name="text_diagnosis">Si tu planta tiene algún problema, te podemos ayudar con el diagnóstico. Solo debes tomarle una foto a tu planta</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="nombre_de_la_planta">Nombre de la Planta</string>
    <string name="espacio_de_la_planta">Espacio de la Planta</string>
</resources>