<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.plantapp.mobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_create_plant"
            app:destination="@id/navigation_create_plant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_diagnosis"
        android:name="com.plantapp.mobile.ui.diagnosis.DiagnosisFragment"
        android:label="@string/title_diagnosis"
        tools:layout="@layout/fragment_suggestions" />

    <fragment
        android:id="@+id/navigation_suggestions"
        android:name="com.plantapp.mobile.ui.suggestions.SuggestionsFragment"
        android:label="@string/title_suggestions"
        tools:layout="@layout/fragment_suggestions" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.plantapp.mobile.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_create_spot"
        android:name="com.plantapp.mobile.ui.create_spot.CreateSpotFragment"
        android:label="@string/create_spot"
        tools:layout="@layout/fragment_create_spot"/>

    <fragment
        android:id="@+id/navigation_create_plant"
        android:name="com.plantapp.mobile.ui.create_plant.CreatePlantFragment"
        android:label="@string/create_plant"
        tools:layout="@layout/fragment_create_plant">
        <action
            android:id="@+id/action_create_plant_to_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_create_plant_to_create_spot"
            app:destination="@id/navigation_create_spot" />
    </fragment>
</navigation>