<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="0dp"
    tools:context=".ui.create_spot.CreateSpotFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:hint="@string/nombre_del_espacio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spotNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:hint="@string/capacidad_espacio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spotCapacityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/linearLayoutTipoEspacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipoEspacioLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center"
                android:paddingTop="8dp"
                android:text="@string/tipo_de_espacio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/tipo_espacio_interior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:text="@string/interior" />

                <RadioButton
                    android:id="@+id/tipo_espacio_exterior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/exterior" />
            </RadioGroup>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/linearLayoutTipoLuz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TipoLuzLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center"
                android:paddingTop="8dp"
                android:text="@string/tipo_de_luz"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/tipo_luz_natural"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:text="@string/natural" />

                <RadioButton
                    android:id="@+id/tipo_luz_artificial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:text="@string/artificial" />

                <RadioButton
                    android:id="@+id/tipo_luz_mixta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/mixta" />
            </RadioGroup>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/linearLayoutTipoAire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TipoAireLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center"
                android:paddingTop="8dp"
                android:text="@string/tipo_de_aire"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/tipo_aire_natural"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:checked="true"
                    android:text="@string/natural" />

                <RadioButton
                    android:id="@+id/tipo_aire_artificial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/artificial" />

                <RadioButton
                    android:id="@+id/tipo_aire_mixta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/mixta" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createSpotBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:text="@string/crear_espacio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelarSpotBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>