<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/initialSuggestion"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/riego_initial"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/suggestionNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riego"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/suggestionDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riego_description"
                android:textSize="14sp" />

        </LinearLayout>

        <!--<ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/riego"
            tools:srcCompat="@drawable/riego" />-->

    </LinearLayout>
</androidx.cardview.widget.CardView>